<resources>
    <string name="app_name">Word Guard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_exit">Press back again to exit.</string>
    <string name="add_word">Add word</string>
    <string name="view_word">View word</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="deadline">Deadline</string>
    <string name="type">Type</string>
    <string name="add_as_word">Add as word</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="search_title">Search</string>
    <string name="pref_personalization_category">Personalization</string>
    <string name="pref_general_category">General</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="night_mode_title">Theme</string>
    <string name="night_mode_no">Light</string>
    <string name="night_mode_yes">Dark</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="pref_notifications_category">Notifications</string>
    <string name="pref_notifications_title">Notify on this device</string>
    <string name="pref_ringtone_title">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_notification_light">Light</string>
    <string name="pref_notification_light_summary">Choose a color to blink the notification light when a new message is received.</string>
    <string name="color_none">None</string>
    <string name="color_white">White</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="pref_restart_required">Application restart is required to apply the changes</string>
    <string-array name="night_mode_entries" translatable="false">
        <item>@string/night_mode_no</item>
        <item>@string/night_mode_yes</item>
        <item>@string/night_mode_auto</item>
    </string-array>
    <string-array name="night_mode_values" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>auto</item>
    </string-array>
    <string-array name="led_color_values" translatable="false">
        <item>#000000</item>
        <item>#FFFFFF</item>
        <item>#FF0000</item>
        <item>#FFFF00</item>
        <item>#00FF00</item>
        <item>#00FFFF</item>
        <item>#0000FF</item>
        <item>#FF00FF</item>
    </string-array>
    <string-array name="led_colors">
        <item>@string/color_none</item>
        <item>@string/color_white</item>
        <item>@string/color_red</item>
        <item>@string/color_yellow</item>
        <item>@string/color_green</item>
        <item>@string/color_cyan</item>
        <item>@string/color_blue</item>
        <item>@string/color_purple</item>
    </string-array>
    <string name="about_version">Version %1$s (%2$s)</string>
    <string name="about_libraries_heading">Libraries used</string>
    <string name="libraries_list" translatable="false"><a href="https://android.googlesource.com/platform/frameworks/support/">Android Support Libraries</a>, <a href="https://github.com/nickbutcher/plaid">Plaid</a>."</string>
    <string name="about_app_license_heading">License</string>
    <string name="about_app_license">Source code available on &lt;a href=\"https://github.com/idoamram/WordGuard\">GitHub&lt;/a> under the &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0\">Apache 2.0 License&lt;/a>.</string>
    <string name="about_rate_app">Rate the App</string>
    <string name="about_io">Ido Amram and Or Ego are awesome Android developers!</string>
    <string name="describe_problem_screenshots">Add screenshots (optional):</string>
    <string name="describe_problem_description">Please describe your problem</string>
    <string name="describe_problem_description_further">Please further describe your problem.</string>
    <string name="describe_problem_include_logs">Include logs</string>
    <string name="mail_subject">Feedback/Bug Report</string>
    <string name="contact_support_via">Contact support via…</string>
    <string name="no_supported_mail_apps">Unable to find installed application to send an email.</string>
    <string name="error_load_image">"Couldn't load this photo. Please try again."</string>
    <string name="screenshot_removed">Screenshot removed</string>
    <string name="permission_storage_rationale">Storage permission is required to show media picker</string>
    <string name="next">Next</string>
    <string name="transition_add_word" translatable="false">add_word</string>
    <string name="word_title">Title</string>
    <string name="word_title_hint">Enter title</string>
    <string name="word_description">Description</string>
    <string name="word_type_public">To someone</string>
    <string name="word_type_private">To me</string>
    <string name="pick_from_contacts">Pick from Contacts</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_phone_number">Phone number</string>
    <string name="contact_email">Email Address</string>
    <string name="more_fields">More fields</string>
    <string name="contact">Contact</string>
    <string name="save_word">Save</string>
    <string name="delete_word">Delete</string>
    <string name="add_location">Add location</string>
    <string name="add_attachment">Add attachment</string>
    <string name="discard_dialog_message">Are you sure you want to discard changes to this word?</string>
    <string name="discard_dialog_discard">Discard</string>
    <string name="discard_dialog_keep_editing">Keep editing</string>
    <string name="loading">Loading</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="talk">Talk</string>
    <string name="all">All</string>
    <string name="todo">Do</string>
    <string name="to_be">Be</string>
    <string name="to_return">Return</string>
    <string name="to_myself">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="transition_word_view_string">transition_word_view_string</string>
</resources>