<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_personalization_category">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/night_mode_entries"
            android:entryValues="@array/night_mode_values"
            android:key="theme"
            android:summary="%s"
            android:title="@string/night_mode_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notifications_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_notifications_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_ringtone_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_vibrate_title" />

        <ListPreference
            android:defaultValue="#FFFFFF"
            android:dependency="notifications_new_message"
            android:entries="@array/led_colors"
            android:entryValues="@array/led_color_values"
            android:key="notify_light_color"
            android:summary="%s"
            android:title="@string/pref_notification_light" />
    </PreferenceCategory>
</PreferenceScreen>