<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context=".ui.activities.WordQuickAddActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:background="@drawable/dialog_background"
        android:clickable="true"
        android:elevation="@dimen/z_fab"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_dialog"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_dialog"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_dialog"
        android:transitionName="@string/transition_add_word">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_title_spacing"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/add_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_micro"
            android:layout_marginStart="@dimen/spacing_micro">

            <AutoCompleteTextView
                android:id="@+id/word_quick_add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_title"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/deadline"
            style="@style/DeadlineSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/spacing_micro"
            android:layout_marginStart="@dimen/spacing_micro"
            android:layout_marginTop="@dimen/padding_normal"
            android:hint="@string/deadline"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/add_word_type_spinner"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/type"
            android:spinnerMode="dropdown"
            android:entries="@array/word_types"/>

        <LinearLayout
            android:id="@+id/actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/add_word_btn_more_fields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/more_fields"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/add_word_btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="addWord"
                android:text="@string/add"
                android:theme="@style/AddButton" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>