<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context=".ui.activities.AddWordActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:background="@drawable/dialog_background"
        android:clickable="true"
        android:elevation="@dimen/z_fab"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_dialog"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_dialog"
        android:transitionName="@string/transition_add_word"
        android:paddingRight="@dimen/padding_dialog"
        android:paddingLeft="@dimen/padding_normal">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_title_spacing"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/add_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="@dimen/spacing_normal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            android:layout_marginLeft="@dimen/spacing_micro">

            <AutoCompleteTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:id="@+id/actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:enabled="false"
                android:onClick="addWord"
                android:text="@string/add"
                android:theme="@style/AddButton" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>